# petrochar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CURRENT_STATUS.md  LICENSE  README.md  app.py  data_riazi_reference_README.md  pyproject.toml  requirements.txt
core/: correlations.py  distillation.py  distribution.py  mw_distribution.py  pcsaft_params.py  quadrature.py  sara.py  sg_distribution.py  watson_k.py
data/panuganti_2012/: README.md  table_5_light_component_pcsaft_params.csv  table_6_correlations.csv  tables_10_11_12_crude_pcsaft.csv
data/riazi_reference/: README.md  table_4_11_example_4_7.csv  table_4_13_distribution_coeffs.csv  table_4_21_quadrature_points.csv  table_4_22_quadrature_3pt.csv  table_4_23_lumping_methods.csv  table_4_6_scn_groups.csv
docs/: methodology.md  validation_report.md
petrochar/: __init__.py  _cli.py
tabs/: __init__.py  distillation_fit.py  distributions.py  input_data.py  pcsaft_export.py  pseudocomponents.py  validation.py
tests/: test_phase11_recovery_aware.py  test_phase1_correlations.py  test_phase2_distillation.py  test_phase3_riazi_example_4_13.py  test_phase4_sg_mw.py  test_phase5_riazi_example_4_14.py  test_phase6_sara_closure.py  test_phase7_pcsaft.py  test_phase8_pipeline.py
tests/reference/: vtb_15_12_25_expected.csv
